# seqme-thirdparty

./: README.md  pyproject.toml  results.tsv  weights.csv
amPEPpy/: predict.py
src/: layers.py  predict.py
src/hello_model/: __init__.py  model.py
src/pepmem/: model.py
