[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "amplify"
version = "0.0.1"
description = "AMPlify"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py==2.2.1",
    "astunparse==1.6.3",
    "biopython==1.85",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "flatbuffers==25.2.10",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.71.0",
    "h5py==3.13.0",
    "idna==3.10",
    "importlib_metadata==8.6.1",
    "joblib==1.4.2",
    "keras==3.9.0",
    "libclang==18.1.1",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.3.2",
    "namex==0.0.8",
    "numpy==1.26.4",
    "opt_einsum==3.4.0",
    "optree==0.14.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "protobuf==4.25.6",
    "Pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "six==1.17.0",
    "tensorboard==2.16.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.16.1",
    "tensorflow-io==0.37.1",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.5.0",
    "threadpoolctl==3.6.0",
    "typing_extensions==4.13.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "Werkzeug==3.1.3",
    "wrapt==1.17.2",
    "zipp==3.21.0",

]